fix(components): tweak SwirlShellNavigationItem spacing

--- a/packages/swirl-components/src/components/swirl-shell-navigation-item/swirl-shell-navigation-item.css
+++ b/packages/swirl-components/src/components/swirl-shell-navigation-item/swirl-shell-navigation-item.css
@@ -81,6 +81,7 @@
     align-items: start;
     flex-direction: column;
     container-type: unset;
+    gap: var(--s-space-8);
 
     &:hover {
       background-color: transparent;
